--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
   },
   "author": "Mathias Biilmann Christensen",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/netlify/netlify-lambda.git"
+  },
+  "bugs": {
+    "url": "https://github.com/netlify/netlify-lambda/issues"
+  },
   "dependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-assign": "^6.22.0",
