Add url to the project homepage

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "netlify-lambda",
   "version": "0.1.0",
   "description": "Build and serve lambda function with webpack compilation",
+  "homepage": "https://github.com/netlify/netlify-lambda#readme",
   "main": "bin/cmd.js",
   "bin": {
     "netlify-lambda": "bin/cmd.js"
