--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "url": "https://github.com/netlify/netlify-lambda/issues"
   },
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
