--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.16.2",
     "express-logging": "^1.1.1",
     "toml": "^2.3.3",
-    "webpack": "^3.8.1"
+    "webpack": "^3.8.1",
+    "webpack-merge": "^4.1.1"
   }
 }
