--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "base-64": "^0.1.0",
     "body-parser": "^1.18.2",
     "commander": "^2.11.0",
