--- a/package.json
+++ b/package.json
@@ -20,19 +20,16 @@
     "url": "https://github.com/netlify/netlify-lambda/issues"
   },
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "babel-loader": "^8.0.0",
     "base-64": "^0.1.0",
-    "body-parser": "^1.18.2",
-    "commander": "^2.11.0",
-    "express": "^4.16.2",
+    "body-parser": "^1.18.3",
+    "commander": "^2.17.1",
+    "express": "^4.16.3",
     "express-logging": "^1.1.1",
     "toml": "^2.3.3",
-    "webpack": "^3.8.1",
-    "webpack-merge": "^4.1.1"
+    "webpack": "^4.17.1",
+    "webpack-merge": "^4.1.4"
   }
 }
