--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "commander": "^2.11.0",
     "express": "^4.16.2",
     "express-logging": "^1.1.1",
+    "jwt-decode": "^2.2.0",
     "toml": "^2.3.3",
     "webpack": "^3.8.1",
     "webpack-merge": "^4.1.1"
