--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "commander": "^2.17.1",
     "express": "^4.16.3",
     "express-logging": "^1.1.1",
+    "express-static": "^1.2.6",
     "jwt-decode": "^2.2.0",
     "toml": "^2.3.3",
     "webpack": "^4.17.1",
