chore: update tooling
BREAKING CHANGE: support for node 8 was dropped

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,15 @@
-{}
+{
+    "printWidth": 80,
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "useTabs": false,
+    "overrides": [
+      {
+        "files": "*.json",
+        "options": { "printWidth": 200 }
+      }
+    ]
+  }
+  
