--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "node-fetch": "^2.6.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "tempy": "^1.0.0"
   },
   "engines": {
     "node": ">=v10.22.1"
