--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "commander": "^5.1.0",
     "express": "^4.17.1",
     "express-logging": "^1.1.1",
+    "find-up": "^5.0.0",
     "globby": "^11.0.1",
     "jwt-decode": "^3.0.0",
     "toml": "^3.0.0",
@@ -54,7 +55,8 @@
     "node-fetch": "^2.6.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "tempy": "^1.0.0"
   },
   "engines": {
     "node": ">=v10.22.1"
