--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,14 +16,20 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
-        node-version: [10.x, 15.x]
-
+        node-version: [10.x, '*']
+        exclude:
+          - os: macOS-latest
+            node-version: 10.x
+          - os: windows-latest
+            node-version: 10.x
+      fail-fast: false
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+          check-latest: true
       - name: Get npm cache directory
         id: npm-cache
         run: |
