--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,13 +15,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
-        node-version: [10.x, '*']
-        exclude:
+        os: [ubuntu-latest]
+        node-version: [10, 12, 14, 16]
+        include:
           - os: macOS-latest
-            node-version: 10.x
+            node-version: 16
           - os: windows-latest
-            node-version: 10.x
+            node-version: 16
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
