--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "lint": "eslint 'lib/**/*.js' 'bin/**/*.js'",
     "format": "prettier --write 'lib/**/*.js' 'bin/**/*.js'",
     "format:ci": "prettier --check 'lib/**/*.js' 'bin/**/*.js'",
-    "test": "jest",
-    "prepublishOnly": "npm ci && run-s lint format:ci test"
+    "test": "jest"
   },
   "files": [
     "lib/*.js",
@@ -53,7 +52,6 @@
     "husky": "^4.0.7",
     "jest": "^27.0.0",
     "node-fetch": "^2.6.0",
-    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.0",
     "rimraf": "^3.0.2",
     "tempy": "^1.0.0"
